# Odoo18CodeReact

./: .env.example  .sesskey  PLANNING.md  README.md  TASK.md  pyproject.toml  react-agent-eval.ipynb
scripts/: populate_vector_db.py  setup_supabase_schema.sql  test_vector_search.py
src/react_agent/: app.py  auth.py  configuration.py  critic.py  graph.py  odoo_code_utils.py  prompts.py  state.py  token_management.py  tools.py  utils.py  vector_store.py
tests/: test_critic.py  test_odoo_code_utils.py  test_odoo_workflow.py  test_real_time_workflow.py
tests/consolidated/: test_components.py  test_integration.py  test_models.py  test_vector_store.py
tests/unit_tests/: test_utils.py
